# oop

./: README.md  bd.md  pyproject.toml
01_classe_Objeto/: aula01.md  classe.py
abstract/: abstract_class.py  attendance.py  sales.py
abstract/files/csv/: attendance_data.csv  sales_data.csv
avaliacao/: avaliacao.md
classe_Objeto/: herenca.py  polifo.py
coding/: main.py
coding/files/csv/: csv_01.csv  csv_02.csv
coding/files/json/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json
coding/loader/: csv.py  json.py  loader.py
const/: indices_eco.py
revisao/: revisao_01.py
